--- a/index.html
+++ b/index.html
@@ -1,1 +1,45 @@
+ <!doctype html>
+ <html lang="en">
+   <head>
+     <title>CK-CARE</title>
+     <!-- Required meta tags -->
+     <meta charset="utf-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
  
+     <!-- Bootstrap CSS -->
+     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+   </head>
+   <body>
+       <nav class="navbar navbar-expand-sm bg-primary justify-content-center"></nav>
+       <nav class="navbar navbar-expand-md bg-primary justify-content-center"></nav>
+       <nav class="navbar navbar-expand-lg bg-primary justify-content-center"></nav>
+       <nav class="navbar navbar-expand-xl bg-primary justify-content-center"></nav>
+       <div class="container-fluid">
+            <ul class="navbar-nav me-auto">
+                <li class="nav-item">
+                   <a class="nav-link" href="#">CK-CARE</a></li>
+                <li class="nav-item">
+                   <a class="nav-link" href="#">Home</a></li>
+                <li class="nav-item">
+                   <a class="nav-link" href="#">About</a></li>
+                <li class="nav-item">
+                   <a class="nav-link" href="#">Services</a></li>
+                <li class="nav-item">
+                   <a class="nav-link" href="#">Doctors</a></li>
+                <li class="nav-item">
+                   <a class="nav-link" href="#">Contact</a>
+                    <form class="d-flex"> 
+                     <button class="btn btn-primary rounded-pill" type="button">
+                    Book Appointment</button>
+                    </form></li>
+            </ul>
+        </div>
+       
+       
+     <!-- Optional JavaScript -->
+     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+   </body>
+ </html>
